components/rhehpai802-2/base/deployment-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: rhehpai802-2-database
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rhehpai802-2-database
    app.kubernetes.io/part-of: rhehpai802-2
  name: rhehpai802-2-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: rhehpai802-2-database
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: rhehpai802-2-database
    spec:
      containers:
        - image: 
          name: database
          args: ["--workers", "1", "--host", "0.0.0.0", "--port", "", "--proxy-headers", "--log-config", "chromadb/log_config.yml", "--timeout-keep-alive", "30"]
          ports:
            - containerPort: 
          securityContext:
            runAsNonRoot: true
