components/rhehpai802-2/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: rhehpai802-2
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rhehpai802-2
  name: rhehpai802-2
spec:
  ports:
    - port: 8501
      protocol: TCP
      targetPort: 8501
  selector:
    app.kubernetes.io/instance: rhehpai802-2
