components/rhehpai802-2/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: rhehpai802-2
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rhehpai802-2
  name: rhehpai802-2
spec:
  port:
    targetPort: 8501
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rhehpai802-2
    weight: 100
  wildcardPolicy: None
